--- a/index.css
+++ b/index.css
@@ -38,8 +38,8 @@ body{
     font-weight: 100;
 }
 .skills{
-    height: 30px;
-    line-height: 30px;
+    height: 40px;
+    line-height: 40px;
     overflow: hidden;
 }
 .text{
@@ -113,6 +113,10 @@ body{
     cursor: pointer;
     background-color: #2E3192;
     transition: all 0.1s ease-out;
+}
+
+a{
+    text-decoration: none;
 }
 
 @media only screen and (max-width:698px){
