--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ border-radius: 10px;
     align-items: center;
 }
 
-.button img{
+.icons{
     height: 40px;
     margin-right: 10px;
 }
@@ -163,7 +163,7 @@ a{
     .button:hover{
         font-size: 24px;
     }
-    .button img{
+    .icons{
         height: 38px;
         margin-right: 10px;
     }
